--- a/Week04/学习总结.md
+++ b/Week04/学习总结.md
@@ -33,7 +33,7 @@ def DFS(self, tree):
 	...
 ```
 
-## BFS 代码模板
+##  BFS 代码模板
 
 ```python
 # Python
@@ -49,5 +49,21 @@ def BFS(graph, start, end):
 		queue.push(nodes)
 	# other processing work 
 	...
+```
+
+## 二分查找代码模板
+
+```python
+# Python
+left, right = 0, len(array) - 1 
+while left <= right: 
+	  mid = (left + right) / 2 
+	  if array[mid] == target: 
+		    # find the target!! 
+		    break or return result 
+	  elif array[mid] < target: 
+		    left = mid + 1 
+	  else: 
+		    right = mid - 1
 ```
 
