--- a/Week08/28. 实现 strStr().md
+++ b/Week08/28. 实现 strStr().md
@@ -13,3 +13,20 @@ class Solution {
 }
 ```
 
+2. > comparsion : time = O(n)
+
+```java
+class Solution {
+    public int strStr(String haystack, String needle) {
+        int needleLen = needle.length(), haystackLen = haystack.length();
+
+        for (int i = 0; i < haystackLen - needleLen + 1; ++i) {
+            if (haystack.substring(i, i + needleLen).equals(needle)) {
+                return i;
+            }
+        }
+        return -1;
+    }
+}
+```
+
