--- a/Week08/191.Number of 1 Bits.md
+++ b/Week08/191.Number of 1 Bits.md
@@ -6,14 +6,31 @@
 public class Solution {
     // you need to treat n as an unsigned value
     public int hammingWeight(int n) {
-        int numOfOneBits = 0;
-        int flag = 1;
-        while (flag < Math.pow(2, 31)) {
-            if ((flag & n) == 1)
-                numOfOneBits++;
-            flag <<= 1;
+        int bits = 0;
+        int mask = 1;
+        for (int i = 0; i < 32; ++i) {
+            if ((n & mask) == mask) {
+                bits++;
+            }
+            mask <<= 1;
         }
-        return numOfOneBits;
+        return bits;
+    }
+}
+```
+
+2. > 
+
+```java
+public class Solution {
+    // you need to treat n as an unsigned value
+    public int hammingWeight(int n) {
+        int sum = 0;
+        while (n != 0) {
+            sum++;
+            n &= (n-1);
+        }
+        return sum;
     }
 }
 ```
